# Video2Img2Gif_Video2Img

./: .gitignore  CLAUDE.md  README.md  _ui_preview.py  main.py  pyproject.toml
src/: __init__.py  converter.py  main_window.py
